# Commenter.su_registration_form

eng_test_task-develop/: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
eng_test_task-develop/pages/: base.py  dashboard.py  sign_in.py  sign_up.py
eng_test_task-develop/tests/: conftest.py  test_dashboard.py  test_sign_in.py  test_sign_up.py
